--- a/url.html
+++ b/url.html
@@ -32,7 +32,7 @@
 		  border-radius: 5px;
   
 		  padding: 5px;
-		  border: solid 2px #c9c9c9;
+		  border: solid 1px #c9c9c9;
 		  transition: border 0.3s;
 		  float:left;
 		  margin-bottom:10px;
@@ -40,8 +40,11 @@
 		input[type="text"]:focus {
 		  outline: none;
 		}
+		.txtinput {
+			cursor:pointer;
+		}
 		#utext {
-			border: solid 2px #696969;
+			border: solid 1px #696969;
 		}
 		.break {
 			border-top: solid 1px #c9c9c9;
@@ -71,6 +74,10 @@
 			
 		}
 		@media only screen and (max-width: 800px) {
+			body {
+	  
+	  	font-size: 17px;
+	  	}
 			input[type="text"] {
 			  display: block;
 			  margin: 0;
