--- a/url.html
+++ b/url.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 	<meta charset='utf-8'>
+	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
 	  <style>
 	  body {
 	  
@@ -74,10 +75,7 @@
 			
 		}
 		@media only screen and (max-width: 800px) {
-			body {
-	  
-	  	font-size: 17px;
-	  	}
+			
 			input[type="text"] {
 			  display: block;
 			  margin: 0;
