--- a/url.html
+++ b/url.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+	<title>URL Predictor</title>
 	<meta charset='utf-8'>
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
 	  <style>
